--- a/manifests.yaml
+++ b/manifests.yaml
@@ -15,7 +15,7 @@ spec:
         app: guestbook
     spec:
       containers:
-      - image: ghcr.io/dhpup/guestbook:0.1.33
+      - image: ghcr.io/emilyxinyi/guestbook:0.1.1
         name: guestbook
         ports:
         - containerPort: 80
