add jira and remove autopromotion for prod

--- a/kargo/project-config.yaml
+++ b/kargo/project-config.yaml
@@ -11,6 +11,6 @@ spec:
   - stageSelector:
       name: uat
     autoPromotionEnabled: true
-  - stageSelector:
-      name: prod-uswest
-    autoPromotionEnabled: true
+  # - stageSelector:
+  #     name: prod-uswest
+  #   autoPromotionEnabled: true
