uat: Updated ./src/guestbook/stages/uat to use new image
- ghcr.io/emilyxinyi/guestbook:0.1.15

--- a/manifests.yaml
+++ b/manifests.yaml
@@ -1,31 +1,14 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: guestbook
 spec:
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: guestbook
----
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
-metadata:
-  name: guestbook
-spec:
-  progressDeadlineSeconds: 3
-  replicas: 2
+  progressDeadlineSeconds: 9
+  replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: guestbook
-  strategy:
-    canary:
-      canaryService: preview-guestbook
-      steps:
-      - setWeight: 50
-      - pause: {}
   template:
     metadata:
       labels:
@@ -40,12 +23,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: preview-guestbook
+  name: guestbook
 spec:
   ports:
-  - name: https
-    port: 80
-    targetPort: https
+  - port: 80
+    targetPort: 80
   selector:
     app: guestbook
-  type: ClusterIP
