--- a/kargo/stage.yaml
+++ b/kargo/stage.yaml
@@ -296,7 +296,7 @@ spec:
           channel: 
             kind: MessageChannel
             name: slack
-          message: "text: PR created:  + ${{ outputs['pr-link'].url }}"
+          message: "PR created:  + ${{ outputs['pr-link'].url }}"
       - uses: git-wait-for-pr
         as: wait-for-pr
         config:
